--- a/nump_prac_2.ipynb
+++ b/nump_prac_2.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "8aa555d0-bebd-49a8-9b94-87d5ce963572",
    "metadata": {},
    "outputs": [
@@ -408,13 +408,13 @@
     }
    ],
    "source": [
-    "arr_d = np.dstack((arr1, arr2))\n",
+    "arr_d = np.dstack((arr1, arr2)) #diagonally\n",
     "print(arr_d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "a0cee20d-ab07-4970-bbcc-426a58fdf399",
    "metadata": {},
    "outputs": [
